Fix header stretch.

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1,4 +1,4 @@
-img.header {
+img#header {
   max-height: 480px;
   width: 100%;
 }
